--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 body {
-    background-image: url("http://inn.spb.ru/images/000/DSC100072343.jpg");
+    background-image: url("https://images.all-free-download.com/images/graphiclarge/flowers_background_dark_red_repeating_icons_pattern_6835476.jpg");
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-}
-
-.block {
-    background-color: white;
-
 }
