find what is adding the extra spaces, then go from there. best of luck!

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
     margin-right: auto;
 }
 
-.select {
-    width: 200px;
+select {
+    width: 50px;
+    text-align: center;
+}
+
+#word {
+    letter-spacing: 5px;
 }
