second advanced function

--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ select {
 #word {
     letter-spacing: 5px;
 }
+
+#reveal, #revealed {
+    position: absolute;
+    top: 213px;
+    right: 33px;
+}
