--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     margin-right: auto;
 }
 
+div {
+    padding: 10px;
+}
+
 select {
     width: 50px;
     text-align: center;
@@ -14,7 +18,7 @@ select {
     letter-spacing: 5px;
 }
 
-#reveal, #revealed {
+#reveal {
     position: absolute;
     top: 213px;
     right: 33px;
